Tue Jul  9 10:02:45 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/{dl,fiddle}/win32/lib/win32/registry.rb
	  (Win32::Registry::Error#initialize): use suitable encoding for the
	  string.

Tue Jul  9 09:46:53 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/win32/lib/win32/registry.rb (Win32::Registry.expand_environ):
	  use suitable encoding for the string.  fixed a test-all error of
	  r41838.

	* ext/fiddle/win32/lib/win32/registry.rb: same changes of r41838 and
	  this revision of dl's win32/registry.rb.

Tue Jul  9 07:39:45 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 2.0.4.  See
	  https://github.com/rubygems/rubygems/blob/2.0/History.txt for changes

Tue Jul  9 01:47:16 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (biglsh_bang): Don't shift a BDIGIT with BITSPERDIG bits.
	  (bigrsh_bang): Ditto.

Tue Jul  9 01:17:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigrsh_bang): Fix bignum digits overrun.

Tue Jul  9 00:46:22 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (biglsh_bang): Fix bignum digits under-run.

Mon Jul  8 23:36:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/win32/lib/win32/registry.rb (Error, API): use WCHAR
	  interfaces.  c.f. [Bug #8508]

Mon Jul  8 23:13:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_pow): move from win32.h and disable strict
	  ANSI mode macro to let _controlfp() stuff defined.
	  [ruby-core:55312] [Bug #8495]

	* numeric.c (finite): add declaration for strict ANSI.
	  [ruby-core:55312] [Bug #8495]

	* thread_win32.c (w32_thread_start_func, thread_start_func_1),
	  (timer_thread_func): use __stdcall instead of _stdcall which is
	  unavailable in strict ANSI mode.  [ruby-core:55312] [Bug #8495]

	* win32/win32.c (gettimeofday): use __cdecl instead of _cdecl.

Mon Jul  8 22:41:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): Arguments for work memory added.
	  (bary_mul_balance): Ditto.
	  (bary_mul_karatsuba): Ditto.
